# ComfyUi-Ollama-YN

./: CompfyuiOllama.py  README.md  __init__.py  ollama_main.py  pyproject.toml  requirements.txt
file/: category.csv
file/saved_contexts/: save_context
web/js/: ollamaOperation.js
